Fix visible dropdown on mobile

--- a/src/functional_components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/functional_components/DropdownMenu/DropdownMenu.module.scss
@@ -79,6 +79,16 @@
         position: initial;
     }
 
+    .dropdownContent {
+        display: none;
+    }
+
+    .active {
+        background: initial;
+        box-shadow: initial;
+        border-radius: initial;
+    }
+
     .iconWrapper {
         display: none;
     }
