--- a/src/functional_components/NavbarMenu/NavbarMenu.module.scss
+++ b/src/functional_components/NavbarMenu/NavbarMenu.module.scss
@@ -67,4 +67,8 @@
         min-height: 50px;
         min-width: 50px;
     }
+
+    .dropdown {
+        display: none;
+    }
 }
